--- a/styles.css
+++ b/styles.css
@@ -104,10 +104,10 @@ header nav li:last-child {
 }
 
 /* --------------
-HERO
+splash
 -----------------*/
 
-#hero {
+#splash {
   background: gray;
   color: white;
   text-align: center;
@@ -121,86 +121,29 @@ HERO
   min-height: 100vh;
 }
 
-#hero h1, #hero h3 {
+#splash h1, #splash h3 {
   font-size: 28px;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   margin-bottom: 40px;
 }
 
-#hero h1 {
+#splash h1 {
   font-size: 60px;
   margin-bottom: 15px;
 }
 
-#hero a.btn {
-  color: white;
-  background-color: #131633;
-  text-decoration: none;
-  padding: 20px 46px;
-  border-radius: 8px;
-  text-transform: uppercase;
-  font-weight: bold;
-  text-align: center;
-  opacity: 1;
-  border: 2px solid white;
-}
-
-#hero a.btn:hover {
-  background-color: #2196f3;
-}
-
 @media(max-width:800px) {
-  #hero {
+  #splash {
     min-height: 600px;
   }
-  #hero h1 {
+  #splash h1 {
     font-size: 36px;
   }
-  #hero h3 {
+  #splash h3 {
     font-size: 18px;
   }
-  #hero a.btn {
+  #splash a.btn {
     padding: 15px 40px;
-  }
-}
-
-/* --------------
-ABOUT
------------------*/
-
-#about {
-  padding: 10px;
-  background-color: #fff;
-  margin-bottom: 20px;
-}
-
-#two-cols {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-.about-img {
-  border: 4px solid #2196f3;
-  background-color: #2196f3;
-}
-
-.about-bio {
-  width: 65%;
-  max-width: 800px;
-  line-height: 2;
-  margin-left: 20px;
-}
-
-@media(max-width:600px) {
-  #about, #two-cols {
-    flex-direction: column;
-  }
-  .about-bio {
-    margin-top: 20px;
-    line-height: 1.5;
-    text-align: left;
   }
 }
 
@@ -252,16 +195,16 @@ GALLERY
 }
 
 /* --------------
-TRAVELING
+Projects
 -----------------*/
 
-#getting-around {
+#projects {
   text-align: center;
   margin: 0 auto;
   background: #f6f6f6;
 }
 
-#getting-around ul.grid {
+#projects ul.grid {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -270,11 +213,11 @@ TRAVELING
   margin-bottom: 60px;
 }
 
-#getting-around p {
+#projects p {
   margin-bottom: 20px;
 }
 
-#getting-around ul.grid li {
+#projects ul.grid li {
   flex-basis: 30%;
   padding: 0 20px;
   margin-bottom: 40px;
@@ -286,94 +229,68 @@ TRAVELING
   margin-bottom: 20px;
 }
 
-#getting-around ul.grid li h4 {
+#projects ul.grid li h4 {
   color: #555;
   font-size: 20px;
   margin-bottom: 10px;
 }
 
-#getting-around ul.grid li p {
+#projects ul.grid li p {
   text-align: left;
   margin: 0;
 }
 
 @media(max-width: 1000px) {
-  #getting-around {
+  #projects {
     padding: 0 40px;
   }
-  #getting-around ul.grid li {
+  #projects ul.grid li {
     flex-basis: 70%;
     margin-bottom: 65px;
   }
-  #getting-around ul.grid li p {
+  #projects ul.grid li p {
     text-align: center;
   }
 }
 
 /* --------------
-QUOTES
+ABOUT
 -----------------*/
 
-#famous-quotes {
-  background-color: #fafafa;
-  padding-bottom: 40px;
-  text-align: center;
-}
-
-#famous-quotes .portrait-photos {
-  border-radius: 50%;
-  border: 4px solid #2196f3;
-  margin-bottom: 10px;
-}
-
-#famous-quotes .portrait-photos:first-child {
-  margin-top: 20px;
-}
-
-#famous-quotes .quote {
-  font-size: 22px;
-  font-weight: 400;
-  line-height: 1.5;
+#about {
+  padding: 10px;
+  background-color: #fff;
   margin-bottom: 20px;
-  padding: 0;
 }
 
-#famous-quotes .author {
-  margin: 20px auto;
-}
-
-#famous-quotes .author:last-child {
-  margin-bottom: 0;
-}
-
-@media(max-width: 1000px) {
-  #famous-quotes .quote {
-    font-size: 18px;
-    padding: 0 20px;
-  }
-  #famous-quotes .author {
-    font-size: 14px;
-  }
-}
-
-/* --------------
-MAP
------------------*/
-
-section.flexbox-section {
-  width: 100%;
+#two-cols {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
-section.flexbox-section p {
-  max-width: 900px;
-  text-align: center;
-  margin-bottom: 35px;
-  padding: 0 20px;
-  line-height: 1.5;
+.about-img {
+  border: 4px solid #2196f3;
+  background-color: #2196f3;
+}
+
+.about-bio {
+  width: 65%;
+  max-width: 800px;
+  line-height: 2;
+  margin-left: 20px;
+}
+
+@media(max-width:600px) {
+  #about, #two-cols {
+    flex-direction: column;
+  }
+  .about-bio {
+    margin-top: 20px;
+    line-height: 1.5;
+    text-align: left;
+  }
 }
 
 /* --------------
